# RotationAvg

./: .gitmodules  .polyscope.ini  CMakeLists.txt  imgui.ini  main  main.cpp
include/: globals.h
include/helpers/: convexCombination.h  math_operations.h  rotations.h  transformations.h
include/math/: convexCombination.h  distances.h  distancesFlags.h  rotationOptimizer.h  rotations.h
include/visualization/: displaying.h  helpers.h  loading.h
src/: CMakeLists.txt  main.cpp
src/helpers/: CMakeLists.txt  math_operations.cpp  rotations.cpp  transformations.cpp
src/math/: CMakeLists.txt  convexCombination.cpp  distances.cpp  distancesFlags.cpp  rotationOptimizer.cpp  rotations.cpp
src/visualization/: CMakeLists.txt  displaying.cpp  helpers.cpp  loading.cpp
